--- a/home.html
+++ b/home.html
@@ -23,47 +23,27 @@
     <div class="negro"></div>
     <div class="contep">
       <div class="princ btn1" onclick="mostrarp(1,1)" id="btn1">
-        <p>1945</p>
+        <p>1</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(2,2)" id="btn2">
-        <p>1962</p>
+        <p>2</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(3,3)" id="btn3">
-        <p>1972</p>
+        <p>3</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(4,4)" id="btn4">
-        <p>1987</p>
+        <p>4</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(5,5)" id="btn5">
-        <p>1992</p>
+        <p>5</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(6,6)" id="btn6">
-        <p>2000</p>
-      </div>
-
-      <div class="princ btn1" onclick="mostrarp(7,7)" id="btn7">
-        <p>2005</p>
-      </div>
-
-      <div class="princ btn1" onclick="mostrarp(8,8)" id="btn8">
-        <p>2010</p>
-      </div>
-
-      <div class="princ btn1" onclick="mostrarp(9,9)" id="btn9">
-        <p>2015</p>
-      </div>
-
-      <div class="princ btn1" onclick="mostrarp(10,10)" id="btn10">
-        <p>2020</p>
-      </div>
-
-      <div class="princ btn1" onclick="mostrarp(11,11)" id="btn11">
-        <p>2022</p>
+        <p>6</p>
       </div>
     </div>
   </div>
@@ -72,83 +52,98 @@
 
   <div class="texto1 hide align-items-center" id="text1">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1945</h2><br>
-      <p class="parr">El 26 de junio de 1945, cincuenta y un países firmaron la Carta de las Naciones Unidas en San Francisco durante
-        la Conferencia de las Naciones Unidas sobre la Organización Internacional, comprometiéndose a mantener la paz y
-        seguridad mundial. Actualmente este último continúa siendo objetivo de las Naciones Unidas, así como el fomentar
-        la amistad entre las naciones, ayudarlas a trabajar unidas para mejorar la vida de los pobres, vencer el hambre,
-        las enfermedades y el analfabetismo, y, fomentar el respeto a los derechos y libertades de los
-
-        demás; además de servir como centro que armonice los esfuerzos de las naciones por alcanzar estos objetivos
-        comunes (Naciones Unidas, 2015).
-      </p>
+      <h2 style="color:#d18a29">1</h2>
+      <div class="conteimatex">
+        <p class="parr"><b>Incorporación de asuntos ASG en los análisis de inversión y procesos de toma de
+            decisiones.</b>
+          Integrar asuntos ASG en las políticas de inversión y promover su evaluación y capacitación, apoyar el
+          desarrollo de herramientas y análisis relacionados, solicitar a proveedores de servicios de inversión que
+          integren factores ASG en investigaciones y análisis, e incentivar la investigación en este tema.</p>
+        <img src="natural.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text2">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1962</h2><br>
-      <p class="parr2">En septiembre de 1962 salió a la venta el libro de divulgación científica <i>Primavera silenciosa</i>, de Rachel
-        Carson, en el que se reflexiona acerca de las consecuencias del uso de sustancias químicas, tales como los
-        pesticidas, en el medio ambiente. Y aunque diversos medios insistieron en difamar a la autora, la obra
-        rápidamente se convirtió en <i>best seller</i> concientizando a la sociedad. Incluso a la obra se le atribuye la
-        creación de la Agencia de Protección Ambiental de los Estados Unidos (Glez, 18 de noviembre de 2021).
-      </p>
+      <h2 style="color:#d18a29">2</h2>
+      <div class="conteimatex">
+        <p class="parr2"><b>Ser propietario activo e incorporar asuntos ASG en prácticas y políticas de propiedad.</b> Elaborar
+          y comunicar una política de ejercicio activo de la propiedad y relacionamiento con empresas, a través de la
+          participación en el desarrollo de políticas, la presentación de resoluciones de accionistas, la colaboración
+          en iniciativas de relacionamiento y la solicitud de informes de administradoras de inversiones.
+        </p>
+        <img src="fisico.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text3">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1972</h2><br>
-      <p class="parr3">Una década después del libro <i>Primavera silenciosa</i> se publicó el informe “Los límites del crecimiento”, escrito
-        por Donella Meadows y sus colegas del MIT para el Club Roma. En este se alertó acerca de los límites ambientales
-        dados por recursos finitos, pero fue rápidamente menoscabado bajo el argumento de que los autores no comprendían
-        los conceptos básicos de la economía, enfatizando que un recurso demandado que escasea tiende a incrementar su
-        costo o a ser sustituido. Actualmente, se reflexiona acerca de que se haya descartado hace medio siglo,
-        resaltando que “si eso no hubiera sucedido, no necesitaríamos el debate hoy” (Jakobs y Likaj, 18 de mayo de
-        2022).
-      </p>
+      <h2 style="color:#d18a29">3</h2>
+      <div class="conteimatex">
+        <p class="parr3"><b>Procurar una divulgación adecuada de los asuntos ASG por parte de las entidades en las que se
+          invierte.</b> Promover la transparencia y responsabilidad empresarial en asuntos ASG mediante la estandarización
+          de informes, la integración en informes financieros, la solicitud de información sobre adopción de normas y
+          estándares internacionales y el apoyo a iniciativas de accionistas.
+        </p>
+        <img src="humano.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text4">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1987</h2><br>
-      <p class="parr4">En 1983 se constituyó la Comisión de Bruntland conformada por la Asamblea General de las Naciones Unidas. En
-        1987 se presenta el informe “Nuestro futuro común” en el que apareció por primera vez el término desarrollo
-        sostenible sobre el que se sustenta la nueva agenda de desarrollo internacional basada en las dimensiones
-        económica, social y ambiental (Comisión Económica para América Latina y el Caribe, s. f.).
-      </p>
+      <h2 style="color:#d18a29">4</h2>
+      <div class="conteimatex">
+        <p class="parr4"><b>Promover la aceptación e implementación de los principios en el sector de las inversiones.</b>
+          Promover la implementación mediante la inclusión de requisitos en solicitudes de propuestas, alinear encargos
+          de inversión y procedimientos de monitoreo, comunicar expectativas a proveedores, revisar relaciones y apoyar
+          el desarrollo de herramientas y políticas que faciliten la implementación de los Principios.
+        </p>
+        <img src="social.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text5">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1992</h2><br>
-      <p class="parr5">Se celebra la Conferencia de las Naciones Unidas sobre Medio Ambiente y Desarrollo (CNUMAD) en Río de Janeiro,
-        se proclaman 27 principios y se formaliza el término <b>desarrollo sostenible</b> (Naciones Unidas, 16 de junio de
-        1992).
-      </p>
+      <h2 style="color:#d18a29">5</h2>
+      <div class="conteimatex">
+        <p class="parr5"><b>
+          Trabajar de manera colaborativa para incrementar la efectividad en la aplicación de los
+            principios.
+        </b> Fomentar la colaboración y el intercambio de recursos en redes y plataformas para abordar asuntos
+          emergentes de manera colectiva y apoyar iniciativas colaborativas pertinentes.
+        </p>
+        <img src="financiero.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text6">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">2000</h2><br>
-      <p class="parr6">Se acordaron los ocho <b>Objetivos de Desarrollo del Mileni</b>o aprobados por los miembros de las Naciones Unidas con
-        la finalidad de cumplirse en 2015. Estos incluían: 1) erradicar la pobreza extrema y el hambre; 2) lograr la
-        enseñanza primaria universal; 3) promover la igualdad de género y el empoderamiento de la mujer; 4) reducir la
-        mortalidad de niños menores de cinco años; 5) mejorar la salud materna; 6) combatir el VIH/sida, el paludismo y
-        otras enfermedades; 7) garantizar la sostenibilidad del medio ambiente; y, 8) fomentar una asociación mundial
-        para el desarrollo (Comisión Económica para América Latina y el Caribe, s. f.).
-      </p>
+      <h2 style="color:#d18a29">6</h2>
+      <div class="conteimatex">
+        <p class="parr6"><b>
+          Presentar informes sobre la actividades y progreso con respecto a la aplicación de los
+            principios.
+        </b> Divulgar y comunicar de manera constante la integración de los asuntos ASG en las prácticas de
+          inversión, incluyendo el ejercicio activo de la propiedad, los requisitos a los proveedores de servicios y los
+          avances en los Principios mediante un enfoque "cumplir o explicar". Asimismo, procurar determinar su impacto e
+          informar a los beneficiarios de manera efectiva a través de la presentación de informes para aumentar la
+          conciencia ASG en diferentes grupos.
+        </p>
+        <img src="intelectual.jpg" alt="" class="imagder">
+      </div>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text7">
     <div class="d-flex align-content-center flex-wrap">
       <h2 style="color:#d18a29">2005</h2><br>
-      <p class="parr7">Las Naciones Unidas emitieron la Evaluación de los Ecosistemas del Milenio (<i>Ecosystem and Human Well-Being</i>) con
+      <p class="parr7">Las Naciones Unidas emitieron la Evaluación de los Ecosistemas del Milenio (<i>Ecosystem and
+          Human Well-Being</i>) con
         el objetivo de conocer el estado de los ecosistemas y tomar acciones para mejorar su conservación y uso
         sostenible, así como del bienestar humano (Naciones Unidas, s. f.). Este estudio representó un hito importante
         al acuñar el término <b>servicios ecosistémico</b>s a partir del cual la naturaleza no solamente tiene un valor
@@ -161,7 +156,8 @@
   <div class="texto1 hide align-items-center" id="text8">
     <div class="d-flex align-content-center flex-wrap">
       <h2 style="color:#d18a29">2010</h2><br>
-      <p class="parr8">Se crea la fundación Ellen MacArthur con el objetivo de promover la economía circular como nuevo paradigma de
+      <p class="parr8">Se crea la fundación Ellen MacArthur con el objetivo de promover la economía circular como nuevo
+        paradigma de
         producción y consumo mundial. Aunque el término economía circular se atribuye inicialmente a la obra de Pearce y
         Turner (1990) y luego a William McDonough autor del libro “De la cuna a la cuna: rediseñando la forma en que
         hacemos las cosas”, la Fundación Ellen MacArthur ha liderado la producción de investigaciones y documentos para
@@ -173,7 +169,8 @@
   <div class="texto1 hide align-items-center" id="text9">
     <div class="d-flex align-content-center flex-wrap">
       <h2 style="color:#d18a29">2015</h2><br>
-      <p class="parr9">Las Naciones Unidas establecieron los Objetivos de <b>desarrollo sostenible</b>, también denominados Objetivos
+      <p class="parr9">Las Naciones Unidas establecieron los Objetivos de <b>desarrollo sostenible</b>, también
+        denominados Objetivos
         Globales, cuya meta general es que para 2030 las personas disfruten de paz y prosperidad. Se contemplan
         diecisiete objetivos, entre los que destacan: fin de la pobreza, hambre cero; salud y bienestar; educación de
         calidad; igualdad de género; agua limpia y saneamiento; energía asequible y no contaminante; etcétera. Al
@@ -186,7 +183,8 @@
   <div class="texto1 hide align-items-center" id="text10">
     <div class="d-flex align-content-center flex-wrap">
       <h2 style="color:#d18a29">2020</h2><br>
-      <p class="parr10">Las consecuencias de la pandemia por COVID-19 causaron estragos dejando al descubierto las múltiples
+      <p class="parr10">Las consecuencias de la pandemia por COVID-19 causaron estragos dejando al descubierto las
+        múltiples
         deficiencias en las dimensiones económica, social y ambiental. A la fecha su impacto sigue presente en las
         sociedades de todo el mundo haciendo un llamado a la unión de esfuerzos para superar una fase que ha trastocado
         al ser humano.
@@ -197,7 +195,8 @@
   <div class="texto1 hide align-items-center" id="text11">
     <div class="d-flex align-content-center flex-wrap">
       <h2 style="color:#d18a29">2022</h2><br>
-      <p class="parr11">El último estudio del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC) evidenció que el
+      <p class="parr11">El último estudio del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC)
+        evidenció que el
         impacto de las actividades humanas sobre el cambio climático es irrefutable. Una verdad que hoy parece obvia
         pero que nos tardó décadas aceptar y que incluso gobiernos recientes, aún niegan con vehemencia, argumentando
         ciclos naturales del clima, ajenos a los impactos del ser humano.
