--- a/home.html
+++ b/home.html
@@ -23,28 +23,26 @@
     <div class="negro"></div>
     <div class="contep">
       <div class="princ btn1" onclick="mostrarp(1,1)" id="btn1">
-        <p>1</p>
+        <p>Década de los sesenta</p>
       </div>
 
       <div class="princ btn1" onclick="mostrarp(2,2)" id="btn2">
-        <p>2</p>
+        <p>Década de los ochenta</p>
       </div>
 
-      <div class="princ btn1" onclick="mostrarp(3,3)" id="btn3">
-        <p>3</p>
+      <div class="princ btn2" onclick="mostrarp(3,3)" id="btn3">
+        <p>1994</p>
       </div>
 
-      <div class="princ btn1" onclick="mostrarp(4,4)" id="btn4">
-        <p>4</p>
+      <div class="princ btn2" onclick="mostrarp(4,4)" id="btn4">
+        <p>1997</p>
       </div>
 
-      <div class="princ btn1" onclick="mostrarp(5,5)" id="btn5">
-        <p>5</p>
+      <div class="princ btn2" onclick="mostrarp(5,5)" id="btn5">
+        <p>Nuevo milenio</p>
       </div>
 
-      <div class="princ btn1" onclick="mostrarp(6,6)" id="btn6">
-        <p>6</p>
-      </div>
+
     </div>
   </div>
 
@@ -52,90 +50,66 @@
 
   <div class="texto1 hide align-items-center" id="text1">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">1</h2>
-      <div class="conteimatex">
-        <p class="parr"><b>Incorporación de asuntos ASG en los análisis de inversión y procesos de toma de
-            decisiones.</b>
-          Integrar asuntos ASG en las políticas de inversión y promover su evaluación y capacitación, apoyar el
-          desarrollo de herramientas y análisis relacionados, solicitar a proveedores de servicios de inversión que
-          integren factores ASG en investigaciones y análisis, e incentivar la investigación en este tema.</p>
-        <img src="natural.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">Década de los sesenta</h2><br>
+      <p class="parr">Surge una preocupación que va más allá de la parte económica, comienzan a proponerse los criterios
+        ambientales y sociales, así como de gobierno corporativo. Los movimientos antiguerra cobran relevancia, hay una
+        preocupación de los jóvenes y en general de la sociedad.
+      </p>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text2">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">2</h2>
-      <div class="conteimatex">
-        <p class="parr2"><b>Ser propietario activo e incorporar asuntos ASG en prácticas y políticas de propiedad.</b> Elaborar
-          y comunicar una política de ejercicio activo de la propiedad y relacionamiento con empresas, a través de la
-          participación en el desarrollo de políticas, la presentación de resoluciones de accionistas, la colaboración
-          en iniciativas de relacionamiento y la solicitud de informes de administradoras de inversiones.
-        </p>
-        <img src="fisico.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">Década de los ochenta</h2><br>
+      <p class="parr2">Guiados por la indignación del Apartheid en África, resurge la discusión de incluir criterios
+        sociales en las organizaciones, esto da paso a la necesidad de impulsar este factor social y en general los
+        criterios ASG.
+      </p>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text3">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">3</h2>
-      <div class="conteimatex">
-        <p class="parr3"><b>Procurar una divulgación adecuada de los asuntos ASG por parte de las entidades en las que se
-          invierte.</b> Promover la transparencia y responsabilidad empresarial en asuntos ASG mediante la estandarización
-          de informes, la integración en informes financieros, la solicitud de información sobre adopción de normas y
-          estándares internacionales y el apoyo a iniciativas de accionistas.
-        </p>
-        <img src="humano.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">1994</h2><br>
+      <p class="parr3">Empiezan a surgir propuestas más conceptuales, como por ejemplo la publicación de John Elkington
+        quien acuña el término del <i>Triple Bottom Line</i>, que en español se traduce a la triple cuenta de resultado,
+        describiendo que una organización, una empresa o un negocio, no puede solamente ocuparse de los aspectos
+        financieros o la parte económica, sino que también tiene que generar un registro de aquellos impactos en la
+        sociedad, tanto positivos como negativos.
+      </p>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text4">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">4</h2>
-      <div class="conteimatex">
-        <p class="parr4"><b>Promover la aceptación e implementación de los principios en el sector de las inversiones.</b>
-          Promover la implementación mediante la inclusión de requisitos en solicitudes de propuestas, alinear encargos
-          de inversión y procedimientos de monitoreo, comunicar expectativas a proveedores, revisar relaciones y apoyar
-          el desarrollo de herramientas y políticas que faciliten la implementación de los Principios.
-        </p>
-        <img src="social.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">1997</h2><br>
+      <p class="parr4">A partir de la triple cuenta de resultado, se desata una serie de eventos como la fundación del
+        <i>Global Reporting Initiative</i> en Boston, que es muy importante para el reporteo y comunicación de los impactos de
+        las dimensiones ASG, convirtiéndose en uno de los estándares más difundidos en estas prácticas.
+      </p>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text5">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">5</h2>
-      <div class="conteimatex">
-        <p class="parr5"><b>
-          Trabajar de manera colaborativa para incrementar la efectividad en la aplicación de los
-            principios.
-        </b> Fomentar la colaboración y el intercambio de recursos en redes y plataformas para abordar asuntos
-          emergentes de manera colectiva y apoyar iniciativas colaborativas pertinentes.
-        </p>
-        <img src="financiero.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">Nuevo milenio</h2><br>
+      <p class="parr5">En el 2004, se plantea el marco del reporte integrado, el cual enfatiza criterios ASG más allá de
+        la dimensión financiera.
+      </p>
     </div>
   </div>
 
   <div class="texto1 hide align-items-center" id="text6">
     <div class="d-flex align-content-center flex-wrap">
-      <h2 style="color:#d18a29">6</h2>
-      <div class="conteimatex">
-        <p class="parr6"><b>
-          Presentar informes sobre la actividades y progreso con respecto a la aplicación de los
-            principios.
-        </b> Divulgar y comunicar de manera constante la integración de los asuntos ASG en las prácticas de
-          inversión, incluyendo el ejercicio activo de la propiedad, los requisitos a los proveedores de servicios y los
-          avances en los Principios mediante un enfoque "cumplir o explicar". Asimismo, procurar determinar su impacto e
-          informar a los beneficiarios de manera efectiva a través de la presentación de informes para aumentar la
-          conciencia ASG en diferentes grupos.
-        </p>
-        <img src="intelectual.jpg" alt="" class="imagder">
-      </div>
+      <h2 style="color:#d18a29">2000</h2><br>
+      <p class="parr6">Se acordaron los ocho <b>Objetivos de Desarrollo del Mileni</b>o aprobados por los miembros de
+        las Naciones Unidas con
+        la finalidad de cumplirse en 2015. Estos incluían: 1) erradicar la pobreza extrema y el hambre; 2) lograr la
+        enseñanza primaria universal; 3) promover la igualdad de género y el empoderamiento de la mujer; 4) reducir la
+        mortalidad de niños menores de cinco años; 5) mejorar la salud materna; 6) combatir el VIH/sida, el paludismo y
+        otras enfermedades; 7) garantizar la sostenibilidad del medio ambiente; y, 8) fomentar una asociación mundial
+        para el desarrollo (Comisión Económica para América Latina y el Caribe, s. f.).
+      </p>
     </div>
   </div>
 
